--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -12,8 +12,8 @@
 		<input type="text" name="name" id="name"> <br><br>
 		Salario:
 		<input type="text" name="salary" id="salary"> <br><br>
-
 		<input type="submit" value="Registrar">
+		<button ><a href="/">Regresar</a></button>
 	</form>
 </body>
 </html>
